<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory
        android:title="@string/settings_general"
        app:iconSpaceReserved="false">

        <ListPreference
            android:defaultValue="system"
            android:entries="@array/theme_entries"
            android:entryValues="@array/theme_values"
            android:key="theme"
            android:title="@string/settings_theme"
            app:iconSpaceReserved="false"
            app:useSimpleSummaryProvider="true" />

        <ListPreference
            android:defaultValue="id"
            android:entries="@array/language_entries"
            android:entryValues="@array/language_values"
            android:key="language"
            android:title="@string/settings_language"
            app:iconSpaceReserved="false"
            app:useSimpleSummaryProvider="true" />

    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/settings_camera"
        app:iconSpaceReserved="false">

        <SwitchPreferenceCompat
            android:defaultValue="true"
            android:key="auto_focus"
            android:title="@string/scanner_auto_focus"
            app:iconSpaceReserved="false" />

        <SwitchPreferenceCompat
            android:defaultValue="true"
            android:key="vibrate"
            android:title="@string/settings_vibrate"
            app:iconSpaceReserved="false" />

        <SwitchPreferenceCompat
            android:defaultValue="true"
            android:key="sound"
            android:title="@string/settings_sound"
            app:iconSpaceReserved="false" />

    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/settings_general"
        app:iconSpaceReserved="false">

        <SwitchPreferenceCompat
            android:defaultValue="true"
            android:key="auto_copy"
            android:title="@string/settings_auto_copy"
            app:iconSpaceReserved="false" />

        <SwitchPreferenceCompat
            android:defaultValue="true"
            android:key="save_history"
            android:title="@string/settings_save_history"
            app:iconSpaceReserved="false" />

    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/about_app"
        app:iconSpaceReserved="false">

        <Preference
            android:key="version"
            android:title="@string/about_version"
            app:iconSpaceReserved="false" />

        <Preference
            android:key="privacy_policy"
            android:title="@string/about_privacy_policy"
            app:iconSpaceReserved="false" />

        <Preference
            android:key="terms"
            android:title="@string/about_terms"
            app:iconSpaceReserved="false" />

        <Preference
            android:key="licenses"
            android:title="@string/about_licenses"
            app:iconSpaceReserved="false" />

    </PreferenceCategory>

</PreferenceScreen> 